[package]
name = "fof"
version = "0.1.4"
edition = "2021"
description = "A fast and flexible friends-of-friends algorithm for idenitfying galaxy groups in redshift surveys. This crate holds the core functionality which can be wrapped in other languages."
license = "MIT"

[dependencies]
integrate = "0.1.11"
libm = "0.2.15"
rayon = "1.10.0"
roots = "0.0.8"
