[package]
name = "fof"
version = "0.1.11"
edition = "2021"
description = "A fast and flexible friends-of-friends algorithm for idenitfying galaxy groups in redshift surveys. This crate holds the core functionality which can be wrapped in other languages."
license = "MIT"

[dependencies]
csv = "1.3.1"
integrate = "0.1.11"
kiddo = "5.2.2"
libm = "0.2.15"
rayon = "1.11.0"
roots = "0.0.8"
rustc-hash = "2.1.1"
